<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSelectedReferenceSystem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/show_position_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinnerReferenceSystems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@id/tvSelectedReferenceSystem"
                app:layout_constraintTop_toBottomOf="@+id/tvSelectedReferenceSystem" />

            <TextView
                android:id="@+id/tvTrackingMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tracking_mode"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerReferenceSystems" />

            <Spinner
                android:id="@+id/spinnerTrackingMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@id/tvTrackingMode"
                app:layout_constraintTop_toBottomOf="@+id/tvTrackingMode" />


            <TextView
                android:id="@+id/tvTrackingSensitivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tracking_sensitivity"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerTrackingMode" />

            <EditText
                android:id="@+id/etTrackingSensitivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="4"
                android:gravity="end"
                android:hint="1.0"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:singleLine="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTrackingSensitivity"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/m"
                app:layout_constraintBaseline_toBaselineOf="@+id/etTrackingSensitivity"
                app:layout_constraintStart_toEndOf="@+id/etTrackingSensitivity" />

            <TextView
                android:id="@+id/tvCreateNewOrUseExisting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/create_new_tracking_shp_or_edit_existing"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etTrackingSensitivity" />

            <RadioButton
                android:id="@+id/btnCreateNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/create_new_shapefile"
                app:layout_constraintStart_toStartOf="@+id/tvCreateNewOrUseExisting"
                app:layout_constraintTop_toBottomOf="@+id/tvCreateNewOrUseExisting" />

            <RadioButton
                android:id="@+id/btnUseExisting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/use_existing_shapefile"
                app:layout_constraintStart_toStartOf="@+id/btnCreateNew"
                app:layout_constraintTop_toBottomOf="@+id/btnCreateNew" />

            <TextView
                android:id="@+id/tvCreateNewShapefile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/create_a_new_shapefile"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnUseExisting" />

            <EditText
                android:id="@+id/eTNewFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/new_file_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true"
                app:layout_constraintStart_toStartOf="@+id/tvCreateNewShapefile"
                app:layout_constraintTop_toBottomOf="@+id/tvCreateNewShapefile"
                android:autofillHints="" />

            <Spinner
                android:id="@+id/spinnerShapefileType"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/eTNewFileName"
                app:layout_constraintTop_toBottomOf="@+id/eTNewFileName" />


        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>




