<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.position2shp.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <Button
            android:id="@+id/btnCenter"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/center"
            app:layout_constraintBottom_toBottomOf="@+id/mapView"
            app:layout_constraintEnd_toEndOf="@+id/mapView"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/start_selector"
            app:layout_constraintBottom_toBottomOf="@+id/mapView"
            app:layout_constraintStart_toStartOf="@+id/mapView"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/clear_black"
            app:layout_constraintBottom_toBottomOf="@+id/mapView"
            app:layout_constraintStart_toEndOf="@+id/btnStart"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/settings_black"
            app:layout_constraintTop_toTopOf="@+id/mapView"
            app:layout_constraintEnd_toEndOf="@+id/mapView"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/edit_black"
            app:layout_constraintTop_toBottomOf="@+id/btnSettings"
            app:layout_constraintStart_toStartOf="@+id/btnSettings"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvCoordX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/x"
            app:layout_constraintBaseline_toBaselineOf="@id/tvReferenceSystem"
            app:layout_constraintStart_toEndOf="@+id/tvReferenceSystem" />

        <TextView
            android:id="@+id/tvCoordZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/z"
            app:layout_constraintBaseline_toBaselineOf="@id/tvReferenceSystem"
            app:layout_constraintStart_toEndOf="@+id/tvCoordY" />

        <TextView
            android:id="@+id/tvCoordY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/y"
            app:layout_constraintBaseline_toBaselineOf="@id/tvReferenceSystem"
            app:layout_constraintStart_toEndOf="@+id/tvCoordX" />

        <TextView
            android:id="@+id/tvReferenceSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/wgs84"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/position_in"
            app:layout_constraintStart_toStartOf="@id/btnStart"
            app:layout_constraintTop_toBottomOf="@id/mapView" />

        <com.esri.arcgisruntime.mapping.view.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></com.esri.arcgisruntime.mapping.view.MapView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>